// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsExamQuestionAutoScore /> renders displayNumber number when there are more than one answer 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
  <div
    className="e-result-scorecount-border-wrap"
  >
    <sup
      aria-hidden="true"
      className="e-result-scorecount-sup e-mrg-r-1"
    >
      1
    </sup>
    <b>
      1
    </b>
     
    / 3 
     
     p.
  </div>
</div>
`;

exports[`<ResultsExamQuestionAutoScore /> renders with score 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
  <div
    className="e-result-scorecount-border-wrap"
  >
    <b>
      1
    </b>
     
    / 3 
     
     p.
  </div>
</div>
`;

exports[`<ResultsExamQuestionAutoScore /> renders without score 1`] = `
<div
  className="e-result-scorecount e-float-right"
>
  <div
    className="e-result-scorecount-border-wrap"
  >
    <div
      className="e-result-scorecount-empty"
    />
     
    / 3 
     
     p.
  </div>
</div>
`;
